tests/baselines/reference/parser509546_1(strict=true).errors.txt
parser509546_1.ts(2,6): error TS7008: Member 'public' implicitly has an 'any' type.


==== parser509546_1.ts (1 errors) ====
    export class Logger { 
         public
         ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
    }
    